# wxHelloWorld

./: CMakeLists.txt  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h  main.cpp  minimal.cpp
